# first_project

./: pyproject.toml
first_project/scripts/: say_hello.py
