[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Alexander Pismenskiy <alex.pismenskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "first_project.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
